@@ -31,7 +31,7 @@ Todoyu::$CONFIG['EXT']['portal']['info'] = array(
 		'company'	=> 'snowflake productions GmbH, Zurich'
 	),
 	'state' 		=> 'stable',
-	'version' 		=> '1.1.1',
+	'version' 		=> '1.1.2',
 	'constraints' 	=> array(
 		'depends' 	=> array(
 			'project' => '1.1.0'
