@@ -1,0 +1,29 @@
+﻿<?xml version="1.0" encoding="utf-8"?>
+<labels>
+	<label index="ext.title">Portal</label>
+	<label index="page.title">Portal</label>
+	<label index="tab">Portal</label>
+	<label index="tab.selectionMoje filtry</label>
+	<label index="tasktree.header.date">Data</label>
+	<label index="tasktree.header.customer">Klient</label>
+	<label index="tasktree.header.number">Nr</label>
+	<label index="tasktree.header.tasknumber">Nimer</label>
+	<label index="task.title.deadline">Deadline</label>
+	<label index="task.title.deadline_short">D</label>
+	<label index="task.title.begin">Start</label>
+	<label index="task.title.begin_short">S</label>
+	<label index="task.title.customer">Klient</label>
+	<label index="task.title.jump">Skocz</label>
+	<label index="task.title.tasknumber">Nr Zadania</label>
+	<label index="tab.todos">Do zrobienia</label>
+	<label index="tab.feedbacks">Feedback</label>
+	<label index="date.start.short">S</label>
+	<label index="selection.noTasksFound">Nie znaleziono zadania do tego filtra wyboru</label>
+	<label index="selection.noProjectsFound">Nie znaleziono projektu do tego filtra wyboru</label>
+	<label index="subMenuEntry.selection">Portal > Wybór</label>
+	<label index="subMenuEntry.todos">Portal > Do zrobienia</label>
+	<label index="subMenuEntry.feedbacks">Portal > Feedback</label>
+	<label index="subMenuEntry.appointments">Portal > Spotkanie</label>
+	<label index="contextmenu.showinproject">Pokarz w projekcie</label>
+	<label index="selection.noFiltersetsSelected">Brak wybranych zestawów filtrów!</label>
+</labels>
