@@ -1,0 +1,5 @@
+﻿<?xml version="1.0" encoding="utf-8"?>
+<labels>
+	<label index="general">Głowne ustawienia</label>
+	<label index="general.use">Użyj portalu i zobacz obszar portalu</label>
+</labels>
