@@ -1,5 +1,8 @@
 todoyu portal extension changelog
 
+portal 1.1.2 - not released yet
+	* Translation: Polish
+
 portal 1.1.1 - 2011-09-15
 	* Minor cleanups
 
